--- a/lib_aatools/src/main/res/layout/file_view_activity.xml
+++ b/lib_aatools/src/main/res/layout/file_view_activity.xml
@@ -7,7 +7,7 @@
     android:background="@color/common_bg"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -27,7 +27,7 @@
         android:visibility="gone"
         tools:visibility="visible" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/file_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
