--- a/lib_aatools/src/main/res/layout/file_view_activity.xml
+++ b/lib_aatools/src/main/res/layout/file_view_activity.xml
@@ -14,21 +14,10 @@
         android:layout_marginBottom="@dimen/layout_interval"
         android:background="?attr/colorPrimary"
         app:navigationIcon="@drawable/toolbar_back_ic"
-        app:title="沙盒文件预览" />
-
-    <TextView
-        android:id="@+id/empty_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="NULL !!!"
-        android:textColor="@color/text_color_medium"
-        android:textSize="16dp"
-        android:visibility="gone"
-        tools:visibility="visible" />
+        app:title="沙盒文件" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/file_rv"
+        android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
