feat: 沙盒文件优化

--- a/lib_aatools/src/main/res/layout/file_view_folder_item.xml
+++ b/lib_aatools/src/main/res/layout/file_view_folder_item.xml
@@ -1,38 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/color_white"
-    android:padding="@dimen/layout_padding">
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/file_icon_iv"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerVertical="true"
-        android:background="@drawable/file_folder_ic" />
-
-    <TextView
-        android:id="@+id/folder_name_tv"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@id/file_icon_iv"
-        android:textColor="@color/text_color_medium"
-        android:textSize="14dp"
-        android:textStyle="bold"
-        tools:text="xxxxxx" />
+        android:background="@color/color_white"
+        android:padding="@dimen/layout_padding">
 
-    <TextView
-        android:id="@+id/folder_path_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/folder_name_tv"
-        android:layout_alignLeft="@id/folder_name_tv"
-        android:layout_marginTop="2dp"
-        android:textColor="@color/text_color_medium"
-        android:textSize="12dp"
-        tools:text="xxxxx/xxxx/xxxxxx.jpg" />
+        <ImageView
+            android:id="@+id/file_icon_iv"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:background="@drawable/file_folder_ic" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/folder_name_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/file_icon_iv"
+            android:textColor="@color/text_color_medium"
+            android:textSize="14dp"
+            android:textStyle="bold"
+            tools:text="xxxxxx" />
+
+        <TextView
+            android:id="@+id/folder_path_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/folder_name_tv"
+            android:layout_alignLeft="@id/folder_name_tv"
+            android:layout_marginTop="2dp"
+            android:textColor="@color/text_color_medium"
+            android:textSize="12dp"
+            tools:text="xxxxx/xxxx/xxxxxx.jpg" />
+
+    </RelativeLayout>
+</FrameLayout>
