feat: 添加Activity栈功能

--- a/lib_aatools/src/main/res/layout/common_list_activity.xml
+++ b/lib_aatools/src/main/res/layout/common_list_activity.xml
@@ -11,12 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        app:navigationIcon="@drawable/toolbar_back_ic"
-        app:title="沙盒文件" />
+        app:navigationIcon="@drawable/toolbar_back_ic" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/layout_interval" />
 
 </LinearLayout>
