--- a/lib_aatools/src/main/res/values/colors.xml
+++ b/lib_aatools/src/main/res/values/colors.xml
@@ -22,7 +22,7 @@
     <color name="color_white">#FFFFFF</color>
     <color name="color_black">#000000</color>
     <color name="color_transparent">#00000000</color>
-    <color name="color_FF5722">#FF5722</color>
+    <color name="color_FF5722">#CEFF5722</color>
 
 
 </resources>
